--- a/videoconference_app/templates/dashboard.html
+++ b/videoconference_app/templates/dashboard.html
@@ -11,7 +11,7 @@
     <body>
       <div class="dashboard">
         <h1>Welcome, {{name}}!</h1>
-
+        <!-- create a "New Meeting" button -->
         <a href="{% url 'meeting' %}" class="button">New Meeting</a>
         <a href="{% url 'join_room' %}" class="button">Join Meeting</a>
         <a href="{% url 'logout' %}" class="button">Logout</a>
